src/tui/snapshots/control_acceso__tui__visual_tests__Empresas_140x40_Classic.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                                                                            
 BRISAS CLI                                                                                                       Operador de prueba · ROOT 
 CONTROL DE ACCESO                                                      EMPRESAS                                                      ··:·· 
 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
   BUSCAR · 0 RESULTADOS                                                                                                                    
                                                                                                                                            
 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
 NOMBRE                                                        CONTRATISTAS   ESTADO    │No hay un registro seleccionado.                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                Sin empresas registradas                                │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                        │                                                   
                                                                                                                                            
 ↑↓ Mover  ENTER Editar  N Nueva  A Estado  / Buscar  ESC Volver  F2 Salida rápida  CTRL+Q Cerrar sesión  F7 Tema                           
                                                                                                                                            

=== estilos ===
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                                                                                                       " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Operador de prueba · ROOT" fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CONTROL DE ACCESO" fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                   EMPRESAS                    " fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                                  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"··:··" fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"  BUSCAR · 0 RESULTADOS                                                                                                                   " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"NOMBRE                                                        CONTRATISTAS   ESTADO    " fg=Rgb(105, 135, 111) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"No hay un registro seleccionado.                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                               Sin empresas registradas                                " fg=Rgb(238, 184, 78) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                        " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"│" fg=Rgb(76, 119, 85) bg=Black mod=NONE
"                                                  " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"↑↓" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Mover  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ENTER" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Editar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"N" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Nueva  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"A" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Estado  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"/" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Buscar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ESC" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Volver  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F2" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CTRL+Q" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Cerrar sesión  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F7" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Tema                           " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
